# splatt-rs

./: Cargo.toml  README.md
examples/: shader_checker.rs  view.rs
src/: lib.rs  splat.wgsl
